# jnnnnn.github.io

./: .gitignore  .prettierrc  8ball-answers.tsv  8ball.html  ETC.txt  babytrack.html  babytrack.html.backup  bachata_moves.txt  bachata_moves_fun.txt  barchart.html  barchart4.html  barchart5.html  barchart6.html  barchart7.html  base-converter.html  budget.html  budget.py  category-colors-2L-inplace.html  category-colors-2L.html  category-colors-constrained-ciecam02.html  category-colors-constrained.html  cv.html  d3-cam02.0.1.4.js  dance-variation-bed.html  dance-variation-salsa.html  dance-variation.html  elite-dangerous-weapon-damage-chart.html  elite-weapon-data.tsv  filter.py  index.html  jnnnnn.html  machine_links.txt  maze.html  mazetree.html  megagen.py  moveexplorer.html  recipes.md  salsa_moves.txt  start-server.bat  stateexplorer-instructions.html  (+10 more)
2read/: index.html
anytrack/: README.md  babytrack.html  index.html
babytrack/: app.js.backup  index.html  styles.css
bookgrapher/: data.json  dev.sh  devlog.md  index.html  readme.md  styles.css
circlepack/: data.csv  index.html  index.js
circlepackedmarkdowntree/: index.html  index.js
circlepackradar/: index.html
doc/: aws-networking.md  buildkite and gitversion.md  coaching.md  index.md  nurturance.md  pairing.md
eliteroute/: README.md  best-loop-data.tsv  best-route-data.tsv  bestloop.py  besttrade.py  graph_cycles.py  results-loop.txt  results.txt  sample_database.7z  start-server.bat  (+1 more)
printbook/: common_words.py  epub2print.py  index-spec.md  main.py  pyproject.toml  spec.md  test_epub2print.py
(+98 files in other folders)
